# linux_command_assistant

./: Cargo.toml  README.md  config.yml
.github/workflows/: arm64-release.yml  macos-arm64-release.yml  macos-release.yml  manual-release.yml  multi-platform-release.yml
src/: completer.rs  main.rs  plugin_system.rs
