[package]
name = "linux_command_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "10.0.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'
strip = true
